Added article's block

--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -50,10 +50,21 @@ body{
   background-color: #50c3af;
   border-radius: 25px;
 }
+.rmb{
+  width: 130px;
+  height: 47px;
+  line-height: 47px;
+  text-align: center;
+  font-size: 17px;
+}
 .title{
   font-weight: 700;
   text-transform: uppercase;
   color: #40474e;
+}
+.underline {
+  background-color: #e4e4e6;
+  display: flex;
 }
 .description{
   font-size: 19px;
@@ -66,7 +77,7 @@ body{
   background: url("/img/header/01.png") no-repeat;
   background-size: 100%;
 }
-.header__body{
+.content__body{
   max-width: 900px;
   margin: 0 auto;
 }
@@ -134,10 +145,6 @@ body{
   padding: 27px 0 100px 0;
   background-color: #eeeeef;
 }
-.categories__body {
-  max-width: 900px;
-  margin: 0 auto;
-}
 .categories__row {
   display: flex;
   justify-content: space-between;
@@ -163,12 +170,47 @@ body{
 .categories__underline{
   height: 2px;
   width: 135px;
-  background-color: #e4e4e6;
   margin-bottom: 25px;
-  display: flex;
 }
 .categories__itemDescription {
   max-width: 230px;
+}
+.articles {
+  padding: 65px 0 106px 0;
+}
+.articles__row {
+  display: flex;
+  justify-content: space-between;
+}
+.articles__item {
+}
+.articles__itemColumn {
+  display: flex;
+  flex-direction: column;
+}
+.articles__itemImageContainer {
+  flex: 1 0 265px;
+  margin-bottom: 56px;
+}
+.articles__itemImage {
+  width: 100%;
+}
+.articles__itemTitle {
+  font-size: 24px;
+  margin-bottom: 31px;
+}
+.articles__underline {
+  height: 2px;
+  width: 290px;
+  margin-bottom: 25px;
+}
+.articles__itemDescription {
+  max-width: 400px;
+  margin-bottom: 45px;
+}
+.articles__rmbWrapper {
+}
+.articles__rmb {
 }
 .footer {
 }
