Added support block

--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -212,6 +212,34 @@ body{
 }
 .articles__rmb {
 }
+.support {
+  padding: 92px 0 85px 0;
+  background-color: #eeeeef;
+}
+.support__item {
+}
+.support__title {
+  font-size: 24px;
+  margin-bottom: 31px;
+}
+.support__icon{
+  color: #c6cbd1;
+  margin-right: 20px;
+}
+.support__underline {
+  width: 561px;
+  height: 2px;
+  margin-bottom: 35px;
+}
+.support__description {
+  margin-bottom: 51px;
+  max-width: 780px;
+}
+.articles__rmbWrapper {
+}
+.support__rmb {
+  background-color: #d2d5da;
+}
 .footer {
 }
 .footer__row {
