--- a/css/style.css
+++ b/css/style.css
@@ -236,6 +236,36 @@ body {
   margin-bottom: 45px;
 }
 
+.support {
+  padding: 92px 0 85px 0;
+  background-color: #eeeeef;
+}
+
+.support__title {
+  font-size: 24px;
+  margin-bottom: 31px;
+}
+
+.support__icon {
+  color: #c6cbd1;
+  margin-right: 20px;
+}
+
+.support__underline {
+  width: 561px;
+  height: 2px;
+  margin-bottom: 35px;
+}
+
+.support__description {
+  margin-bottom: 51px;
+  max-width: 780px;
+}
+
+.support__rmb {
+  background-color: #d2d5da;
+}
+
 .footer__row {
   height: 80px;
   display: flex;
