--- a/css/style.css
+++ b/css/style.css
@@ -315,6 +315,40 @@ body {
   color: #50c3af;
 }
 
+.prompting {
+  padding: 88px 0 81px 0;
+  background-color: #eeeeef;
+}
+
+.prompting__row {
+  display: flex;
+}
+
+.prompting__item {
+  flex: 0 1 50%;
+}
+
+.prompting__title {
+  font-size: 24px;
+  margin-bottom: 25px;
+}
+
+.prompting__icon {
+  color: #c6cbd1;
+  margin-right: 20px;
+}
+
+.prompting__underline {
+  height: 2px;
+  width: 334px;
+  margin-bottom: 37px;
+}
+
+.prompting__description {
+  max-width: 350px;
+  margin-bottom: 48px;
+}
+
 .footer__row {
   height: 80px;
   display: flex;
