Added comment for stylesheet

--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -4,6 +4,7 @@
 @import url('https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cabin&display=swap');
 */
+/*--------------- Шрифты--------------- */
 @import url('https://fonts.googleapis.com/css2?family=Cabin&family=Open+Sans:wght@600&family=PT+Sans:wght@400;700&family=Ubuntu:wght@700&display=swap');
 @font-face {
   font-family: 'Belinda';
@@ -26,6 +27,8 @@
   font-weight: normal;
   font-style: normal;
 }
+/*--------------- /Шрифты--------------- */
+/*--------------- Общие стили--------------- */
 body{
   background-color: #f5f5f5;
   font-family: 'PT Sans', sans-serif;
@@ -36,8 +39,8 @@ body{
   display: flex;
   flex-direction: column;
   /* Осторожно */
-  min-height: 100%;
-  overflow: hidden;
+  min-height: 100vh;
+ // overflow: hidden;
   /* Осторожно */
 }
 .container {
@@ -70,18 +73,20 @@ body{
   font-size: 19px;
   color: #787b80;
 }
-.header {
-  color: #ffffff;
-  text-align: center;
-  height: 100vh;
-  background: url("/img/header/01.png") no-repeat;
-  background-size: 100%;
-}
 .content__body{
   max-width: 900px;
   margin: 0 auto;
 }
 
+/*---------------/Общие стили--------------- */
+/*---------------Шапка сайта--------------- */
+.header {
+  color: #ffffff;
+  text-align: center;
+  height: 100vh;
+  background: url("/img/header/01.png") center / cover no-repeat;
+  background-size: 100%;
+}
 .header__column {
   display: flex;
   flex-direction: column;
@@ -139,8 +144,11 @@ body{
   text-align: center;
   font-size: 20px;
 }
+/*---------------/Шапка сайта--------------- */
+/*---------------Контентная часть--------------- */
 .content {
 }
+/*---------------Блок категории--------------- */
 .categories {
   padding: 27px 0 100px 0;
   background-color: #eeeeef;
@@ -175,6 +183,8 @@ body{
 .categories__itemDescription {
   max-width: 230px;
 }
+/*---------------/Блок категории--------------- */
+/*---------------Статьи--------------- */
 .articles {
   padding: 65px 0 106px 0;
 }
@@ -212,6 +222,8 @@ body{
 }
 .articles__rmb {
 }
+/*---------------/Статьи--------------- */
+/*---------------Поддержка--------------- */
 .support {
   padding: 92px 0 85px 0;
   background-color: #eeeeef;
@@ -238,6 +250,8 @@ body{
 .support__rmb {
   background-color: #d2d5da;
 }
+/*---------------/Поддержка--------------- */
+/*---------------Наши плюсы--------------- */
 .benefits {
   padding: 82px 0 93px 0;
 }
@@ -277,6 +291,8 @@ body{
   font-size: 17px;
   color: #50c3af;
 }
+/*---------------/Наши плюсы--------------- */
+/*---------------Побуждение--------------- */
 .prompting {
   padding: 88px 0 81px 0;
   background-color: #eeeeef;
@@ -308,6 +324,8 @@ body{
 }
 .prompting__rmb {
 }
+/*---------------/Побуждение--------------- */
+/*---------------Персональное предложение--------------- */
 .forYou {
   padding: 81px 0 82px 0;
 }
@@ -343,6 +361,8 @@ body{
 .forYou__rmb {
   background-color: #d2d5da;
 }
+/*---------------/Персональное предложение--------------- */
+/*---------------Наши партнёры--------------- */
 .partners {
   padding: 70px 0 97px 0;
   background-color: #50c3af;
@@ -394,9 +414,10 @@ body{
 .partners__p4 {
   font-family: 'Nexa_Bold', sans-serif;
   font-weight: 900;
-
 }
-
+/*---------------/Наши партнёры--------------- */
+/*---------------/Конетнтная часть--------------- */
+/*---------------Подвал сайта--------------- */
 .footer {
 }
 .footer__row {
@@ -429,5 +450,5 @@ body{
     margin-left: 19px;
   }
 }
-
+/*---------------/Подвал сайта--------------- */
 
