--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -42,6 +42,7 @@ body{
   min-height: 100vh;
  // overflow: hidden;
   /* Осторожно */
+  width: 100%;
 }
 .container {
   max-width: 1170px;
@@ -77,7 +78,21 @@ body{
   max-width: 900px;
   margin: 0 auto;
 }
-
+@media (max-width: 1170px){
+  .content__body{
+    max-width: 970px;
+  }
+}
+@media (max-width: 992px){
+  .content__body{
+    max-width: 750px;
+  }
+}
+@media (max-width: 767px){
+  .content__body{
+    max-width: none;
+  }
+}
 /*---------------/Общие стили--------------- */
 /*---------------Шапка сайта--------------- */
 .header {
@@ -85,19 +100,22 @@ body{
   text-align: center;
   height: 100vh;
   background: url("/img/header/01.png") center / cover no-repeat;
-  background-size: 100%;
 }
 .header__column {
   display: flex;
   flex-direction: column;
 }
 .header__logoTitle {
-  font-family: 'Belinda';
+  font-family: 'Belinda', sans-serif;
   font-size: 70px;
   line-height: 24px;
   padding-top: 86px;
   margin-bottom: 60px;
 }
+.header__burger {
+  display: none;
+}
+
 .header__navigation {
   margin-bottom: 105px;
 }
@@ -144,6 +162,104 @@ body{
   text-align: center;
   font-size: 20px;
 }
+/*Бургер меню */
+@media (max-width: 767px) {
+  body.lock {
+    overflow: hidden;
+  }
+  .header__burger {
+    display: block;
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    width: 30px;
+    height: 20px;
+    z-index: 2;
+  }
+  .header__burger span {
+    position: absolute;
+    background-color: #fff;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    top: 9px;
+    transition: all 0.3s ease 0s;
+  }
+  .header__burger:before,
+  .header__burger:after {
+    content: '';
+    background-color: #fff;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    left: 0;
+    transition: all 0.3s ease 0s;
+  }
+  .header__burger:before {
+    top: 0;
+  }
+  .header__burger:after {
+    bottom: 0;
+  }
+  .header__burger.active:before{
+    transform: rotate(-45deg);
+    top: 9px;
+  }
+  .header__burger.active:after{
+    transform: rotate(45deg);
+    bottom: 9px;
+  }
+  .header__burger.active span{
+    transform: scale(0);
+  }
+  .header__navigation {
+    position: fixed;
+    top: -100%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #50c3af;
+    padding-top: 40px;
+    transition: all 0.3s ease 0s;
+    overflow: auto;
+  }
+  .header__navigation.active {
+    top: 0;
+  }
+  .header__navigationRow {
+    display: block;
+  }
+  .header__navigationRow {
+    & li {
+      margin-bottom: 15px;
+    }
+  }
+}
+/* /Бургер меню*/
+@media (max-width: 1170px){
+
+}
+@media (max-width: 992px){
+
+}
+@media (max-width: 767px){
+  .header__column {
+    padding-top: 30px;
+  }
+  .header__logoTitle {
+    font-size: 50px;
+    margin-bottom: 30px;
+    padding-top: 30px;
+  }
+  .header__navigation {
+    margin-bottom: 50px;
+  }
+  .header__mainTitleText {
+    font-size: 40px;
+    line-height: 40px;
+  }
+}
+
 /*---------------/Шапка сайта--------------- */
 /*---------------Контентная часть--------------- */
 .content {
