Added adaptive for all rest blocks.

--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -70,6 +70,11 @@ body{
   background-color: #e4e4e6;
   display: flex;
 }
+@media (max-width: 767px){
+  .underline {
+    max-width: 280px;
+  }
+}
 .description{
   font-size: 19px;
   color: #787b80;
@@ -236,8 +241,7 @@ body{
   }
 }
 /* /Бургер меню*/
-@media (max-width: 1170px){
-
+@media (max-width: 1170px) {
 }
 @media (max-width: 992px){
 
@@ -257,6 +261,9 @@ body{
   .header__mainTitleText {
     font-size: 40px;
     line-height: 40px;
+  }
+  .header__getButton {
+    width: 275px;
   }
 }
 
@@ -288,7 +295,7 @@ body{
   width: 100%;
 }
 .categories__itemTitle {
-  font-size: 21px;
+  font-size: 20px;
   margin-bottom: 21px;
 }
 .categories__underline{
@@ -298,6 +305,24 @@ body{
 }
 .categories__itemDescription {
   max-width: 230px;
+}
+@media (max-width: 1170px) {
+}
+@media (max-width: 992px){
+
+}
+@media (max-width: 767px){
+  .categories__row {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .categories__item {
+    margin-bottom: 20px;
+  }
+  .categories__underline {
+    width: 280px;
+  }
+
 }
 /*---------------/Блок категории--------------- */
 /*---------------Статьи--------------- */
@@ -338,6 +363,40 @@ body{
 }
 .articles__rmb {
 }
+@media (max-width: 1170px) {
+}
+@media (max-width: 992px){
+
+}
+@media (max-width: 767px){
+  .articles {
+    padding: 55px 0 55px 0;
+  }
+  .articles__item {
+    margin-bottom: 20px;
+  }
+  .articles__itemImageContainer{
+    margin-bottom: 0;
+  }
+  .articles__itemColumn {
+    align-items: center;
+  }
+  .articles__row {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+ .articles__itemTitle {
+   font-size: 20px;
+ }
+  .articles__underline {
+    width: 280px;
+  }
+  .articles__itemDescription {
+    max-width: 260px;
+    text-align: center;
+  }
+
+}
 /*---------------/Статьи--------------- */
 /*---------------Поддержка--------------- */
 .support {
@@ -345,6 +404,15 @@ body{
   background-color: #eeeeef;
 }
 .support__item {
+  display: flex;
+  flex-direction: column;
+}
+.support__itemColumn {
+  display: flex;
+  flex-direction: column;
+}
+.titleBox {
+  display: flex;
 }
 .support__title {
   font-size: 24px;
@@ -366,17 +434,46 @@ body{
 .support__rmb {
   background-color: #d2d5da;
 }
+@media (max-width: 1170px) {
+}
+@media (max-width: 992px){
+
+}
+@media (max-width: 767px){
+  .support {
+    padding: 80px 0 80px 0;
+  }
+  .support__itemColumn {
+    align-items: center;
+  }
+  .support__title {
+    font-size: 19px;
+  }
+  .support__icon {
+    margin-right: 10px;
+  }
+  .support__underline {
+    width: 280px;
+  }
+  .support__description {
+    max-width:260px;
+    text-align: center;
+  }
+}
 /*---------------/Поддержка--------------- */
 /*---------------Наши плюсы--------------- */
 .benefits {
   padding: 82px 0 93px 0;
+  display: flex;
 }
 .benefits__row {
   display: flex;
+  justify-content: center;
   margin: 0 0 0 -46px;
 }
 .benefits__item {
-  flex: 1 1 33.333%;
+  display: flex;
+  flex: 0 1 33.333%;
   padding: 0 0 0 46px;
 }
 .benefits__itemColumn {
@@ -391,7 +488,7 @@ body{
   width: 100%;
 }
 .benefits__itemTitle {
-  font-size: 21px;
+  font-size: 20px;
   margin-bottom: 27px;
 }
 .benefits__underline {
@@ -407,6 +504,52 @@ body{
   font-size: 17px;
   color: #50c3af;
 }
+@media (max-width: 1170px) {
+}
+@media (max-width: 992px){
+  .benefits {
+    justify-content: center;
+  }
+  .benefits__row {
+    flex-wrap: wrap;
+  }
+  .benefits__item {
+    margin-bottom: 50px;
+  }
+  .benefits__itemColumn {
+    align-items: center;
+  }
+  .benefits__itemImageContainer {
+    flex: 1 1 auto;
+    margin-bottom: 20px;
+  }
+}
+@media (max-width: 767px){
+  .benefits {
+    justify-content: center;
+    padding: 50px 0 50px 0;
+  }
+  .benefits__row {
+    flex-wrap: wrap;
+  }
+  .benefits__item {
+    margin-bottom: 20px;
+  }
+  .benefits__itemColumn {
+    align-items: center;
+  }
+  .benefits__itemImageContainer {
+    flex: 0 1 200px;
+    margin-bottom: 0;
+  }
+  .benefits__underline {
+    width: 280px;
+  }
+  .benefits__itemDescription{
+    max-width: 260px;
+    text-align: center;
+  }
+}
 /*---------------/Наши плюсы--------------- */
 /*---------------Побуждение--------------- */
 .prompting {
@@ -419,8 +562,12 @@ body{
 .prompting__item {
   flex: 0 1 50%;
 }
+.prompting__itemColumn {
+  display: flex;
+  flex-direction: column;
+}
 .prompting__title {
-  font-size: 24px;
+  font-size: 20px;
   margin-bottom: 25px;
 }
 .prompting__icon {
@@ -439,6 +586,38 @@ body{
 .prompting__rmbWrapper {
 }
 .prompting__rmb {
+}
+@media (max-width: 1170px) {
+}
+@media (max-width: 992px){
+  .prompting__row {
+    justify-content: center;
+  }
+}
+@media (max-width: 767px){
+  .prompting {
+    padding: 50px 0 50px 0;
+  }
+  .prompting__row {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .prompting__item {
+    margin-bottom: 40px;
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+  .prompting__itemColumn {
+    align-items: center;
+  }
+  .prompting__underline {
+    width: 280px;
+  }
+  .prompting__description {
+    max-width: 260px;
+    text-align: center;
+  }
 }
 /*---------------/Побуждение--------------- */
 /*---------------Персональное предложение--------------- */
@@ -460,6 +639,10 @@ body{
   flex: 0 1 50%;
   padding: 0 0 0 72px;
 }
+.forYou__itemColumn {
+  display: flex;
+  flex-direction: column;
+}
 .forYou__title {
   font-size: 21px;
   margin-bottom: 31px;
@@ -476,6 +659,31 @@ body{
 }
 .forYou__rmb {
   background-color: #d2d5da;
+}
+@media (max-width: 1170px) {
+}
+@media (max-width: 992px){
+
+}
+@media (max-width: 767px){
+  .forYou__row {
+    //flex-wrap: wrap;
+    flex-direction: column;
+  }
+  .forYou__imageWrapper {
+    //margin: 0 10px;
+    margin: 0 10px 40px 10px;
+  }
+  .forYou__itemColumn {
+    align-items: center;
+  }
+  .forYou__title {
+   font-size: 18px;
+  }
+  .forYou__description {
+    max-width: 260px;
+    text-align: center;
+  }
 }
 /*---------------/Персональное предложение--------------- */
 /*---------------Наши партнёры--------------- */
@@ -531,6 +739,35 @@ body{
   font-family: 'Nexa_Bold', sans-serif;
   font-weight: 900;
 }
+@media (max-width: 1170px) {
+}
+@media (max-width: 992px){
+
+}
+@media (max-width: 767px){
+  .partners {
+    padding: 55px 0 55px 0;
+  }
+  .partners__icon {
+    margin-right: 10px;
+  }
+  .partners__title {
+    font-size: 20px;
+  }
+  .partners__underline {
+    margin-bottom: 30px;
+  }
+  .partners__row {
+    flex-direction: column;
+    align-items: center;
+  }
+  .partners__item {
+    margin-bottom: 20px;
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+}
 /*---------------/Наши партнёры--------------- */
 /*---------------/Конетнтная часть--------------- */
 /*---------------Подвал сайта--------------- */
@@ -566,5 +803,25 @@ body{
     margin-left: 19px;
   }
 }
-/*---------------/Подвал сайта--------------- */
+@media (max-width: 1170px) {
+}
+@media (max-width: 992px){
 
+}
+@media (max-width: 767px) {
+  .footer__row {
+    flex-direction: column;
+    align-items: center;
+  }
+  .footer__copyrightText {
+    font-size: 14px;
+  }
+  .footer__socialMediasIcons a {
+    font-size: 25px;
+  }
+  .footer__socialMedias {
+    margin-bottom: 20px;
+  }
+}
+
+/*---------------/Подвал сайта--------------- */
